vixens-gitops/apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-gandi-prod
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - longhorn.truonline.com
    secretName: longhorn-tls
  rules:
  - host: longhorn.truonline.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: longhorn-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
